--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>gadio</title>
+        <link rel="dns-prefetch" href="//cors-anywhere.herokuapp.com/">
+        <link rel="dns-prefetch" href="//image.gcores.com/">
     </head>
     <body>
-        <div id="root"></div>
+        <div id="app" class="m-container-max"></div>
     </body>
 </html>
